force-app/main/default/objects/vlocity_ins__AssetCoverage__c/vlocity_ins__AssetCoverage__c.object-meta.xml
<CustomObject>
    <description>Represents the amount of risk or liability that is covered by the insurer for an individual or entity under the insurance policy. Coverages typically include deductibles, premiums or policy limits for auto, life or umbrella insurance policies. Master-detail child object of Policy (Asset).</description>
    <label>Policy Coverage</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>