force-app/main/default/objects/vlocity_ins__AssetCoverage__c/fields/vlocity_ins__CoverageCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CoverageCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>